fixed drop down menu to collapse on the right side for mobile in safari browser.

--- a/sass/partials/header.scss
+++ b/sass/partials/header.scss
@@ -77,3 +77,12 @@ background-color: transparent;
 .navbar-light .navbar-nav .active>.nav-link{
   color: $font-white;
 }
+.col-5{
+  position: relative;
+  right: 3vh;
+}
+.col{
+  position: relative;
+  left: 2vh;
+
+}
