--- a/style.css
+++ b/style.css
@@ -116,6 +116,16 @@ nav a {
   color: #FDF8E1;
 }
 
+.col-5 {
+  position: relative;
+  right: 3vh;
+}
+
+.col {
+  position: relative;
+  left: 2vh;
+}
+
 /**
  * partials/footer
  * ---
